<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="403dp"
        android:layout_height="78dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024">

        <ImageView
            android:id="@+id/imageView_home"
            android:layout_width="29dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/ic_house" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="0dp"
            android:layout_height="41dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:contentDescription="@string/mainlogo"

            app:srcCompat="@drawable/ic_logo" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="33dp"
            android:layout_height="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/sms"
            app:srcCompat="@drawable/ic_sms" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-black"
        android:includeFontPadding="true"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="#040404"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="407dp"
        android:layout_height="320dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="-4dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_welcome"
        app:layout_constraintVertical_bias="0.06">

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="352dp"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:background="@drawable/costume_items"
            android:drawableStart="@drawable/ic_baseline_smartphone_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/mobile_number"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:minHeight="48dp"
            android:padding="5dp"
            android:textColorHint="#757575" />

        <EditText

            android:id="@+id/editTextTextPassword"
            android:layout_width="352dp"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/costume_items"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="5dp" />

        <LinearLayout
            android:layout_width="174dp"
            android:layout_height="48dp"
            android:layout_marginStart="25dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="153dp"
                android:layout_height="48dp"
                android:layout_marginTop="1dp"
                android:text="@string/remember_me"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="334dp"
            android:layout_height="55dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="1dp"
            android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
            android:text="@string/Login" />

        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:layout_marginHorizontal="37dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="1813dp"
            tools:layout_editor_absoluteY="353dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:paddingHorizontal="60dp"
                android:text="@string/tap_to_login_with_biomatric"
                app:drawableLeftCompat="@drawable/ic_baseline_fingerprint_24" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="332dp"
            android:layout_height="39dp"
            android:layout_marginStart="37dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="23dp"
                android:layout_height="26dp"
                android:layout_marginStart="80dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ic_question" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:contextClickable="true"
                android:text="@string/unable_to_login"
                android:textColor="#000000"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="410dp"
        android:layout_height="34dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <View
            android:layout_width="180dp"
            android:layout_height="1dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:background="@color/greyish" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="29dp"
            android:layout_height="18dp"
            app:srcCompat="@drawable/ic_seclogo"
            android:contentDescription="@string/logo2" />

        <View
            android:layout_width="180dp"
            android:layout_height="1dp"
            android:layout_marginStart="3.5dp"
            android:layout_marginTop="10dp"

            android:background="@color/greyish" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="403dp"
        android:layout_height="104dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <androidx.cardview.widget.CardView
            android:layout_width="380dp"
            android:layout_height="96dp"
            android:layout_marginStart="10dp">

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="382dp"
                android:layout_height="101dp"
                android:paddingBottom="2dp"
                app:srcCompat="@drawable/ic_ads"
                android:contentDescription="@string/ads" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>